fix design break on firefox

--- a/assets/src/less/dashboard.less
+++ b/assets/src/less/dashboard.less
@@ -221,6 +221,7 @@ div.media-sidebar a.edit-attachment{
                                 box-shadow: inset 0 0 0 0 #54b3d6;
                                 margin: 0 -.25rem;
                                 transition: color .3s ease-in-out, box-shadow .3s ease-in-out;
+                                white-space: nowrap;
 
                                 &::after {
                                     content: '\25BC';
